--- a/style.css
+++ b/style.css
@@ -1,55 +1,58 @@
-
-/* Fundo preto com estrelas */
-body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    font-family: 'Dancing Script', cursive;
+/* style.css */
+html, body {
+margin: 0;
+padding: 0;
+width: 100%;
+height: 100%;
+overflow: hidden;
+background: black;
+font-family: "Georgia", serif;
 }
 
-.stars, .twinkling {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%;
-    height: 100%;
-    display: block;
+
+#stars, #stars2, #stars3 {
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: transparent url('https://raw.githubusercontent.com/joyblob/starbg/main/stars.png') repeat;
+animation: moveStars 200s linear infinite;
+z-index: 0;
+}
+#stars2 {
+animation-duration: 300s;
+opacity: 0.6;
+}
+#stars3 {
+animation-duration: 500s;
+opacity: 0.3;
 }
 
-.stars {
-    background: black url("https://i.imgur.com/bgY6bC8.png") repeat;
-    z-index: 0;
+
+@keyframes moveStars {
+from { background-position: 0 0; }
+to { background-position: -10000px 10000px; }
 }
 
-.twinkling {
-    background: transparent url("https://i.imgur.com/XYMF7sB.png") repeat;
-    animation: move 10s linear infinite;
-    z-index: 1;
-}
 
-@keyframes move {
-    from {background-position: 0 0;}
-    to {background-position: -1000px 500px;}
-}
-
-/* Carta */
 .carta {
-    position: relative;
-    z-index: 2;
-    background: #fffdf7;
-    width: 90%;
-    max-width: 500px;
-    margin: 80px auto;
-    padding: 30px;
-    border-radius: 12px;
-    box-shadow: 0 0 20px rgba(255,255,255,0.3);
-    text-align: center;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+width: 90%;
+max-width: 450px;
+background: #fff;
+padding: 30px;
+border-radius: 10px;
+box-shadow: 0 0 25px rgba(255,255,255,0.2);
+z-index: 10;
+line-height: 1.6;
 }
 
-.carta h1 {
-    font-size: 2.2rem;
-}
 
-.carta p {
-    font-size: 1.6rem;
-    line-height: 1.6;
+.mensagem {
+white-space: pre-line;
+font-size: 1.1rem;
 }
